# amr_ws

devel/: .catkin  .rosinstall
devel/include/: BooleanVariables.h
devel/include/opencv_services/: box_and_target_position.h  box_and_target_positionResponse.h
devel/include/ur5_notebook2/: Tracker.h  blocks_poses.h
devel/lib/follow_waypoints/: path_planner
devel/lib/levelManager/: levelManager.py
devel/lib/logic/: logic
devel/lib/opencv_services/: opencv_extract_object_positions
devel/lib/pkgconfig/: autoxing.pc  aws_robomaker_small_warehouse_world.pc  ax6112.pc  (+56 more)
follow_waypoints-master/depends/: NODE.json  node_relation.json  tag2node.json
follow_waypoints-master/saved_path/: pose.csv
hust_amr-main/: README.md
hust_amr-main/pi_communication/: CMakeLists.txt  package.xml  setup.py
hust_amr-main/pi_communication/launch/: pi_com.launch
hust_amr-main/pi_communication/param/: connection.yaml
hust_amr-main/pi_communication/scripts/: pi_handle.py
hust_amr-main/pi_communication/scripts/pi_communication/: tcp.py
src/autoxing/: CMakeLists.txt
src/ax6112/: CMakeLists.txt
src/ax6112_ur5_best/: .setup_assistant  CMakeLists.txt  package.xml
src/ax6112_ur5_struct/: .setup_assistant  CMakeLists.txt
src/ax6113_ur5/: .setup_assistant  CMakeLists.txt
src/ax6113final/: CMakeLists.txt  package.xml
src/box/: CMakeLists.txt  package.xml
src/galaxy/: CMakeLists.txt  package.xml
src/logic/: CMakeLists.txt  demo.cpp  logic.cpp
src/machine/: CMakeLists.txt
src/phone_case/: CMakeLists.txt  package.xml
src/simple_navigation_goals/: CMakeLists.txt
(+342 files in other folders)
