<?xml version="1.0"?>
<package format="2">
  <name>pi_communication</name>
  <version>0.0.0</version>
  <description>The pi_communication package</description>
  <maintainer email="crypps1412@gmail.com">crypps1412</maintainer>
  <license>MIT</license>
  <url type="website">http://git/sdv_agv</url>
  <author email="crypps1412@gmail.com">crypps1412</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <depend>tf</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
